--- a/language/EN.json
+++ b/language/EN.json
@@ -19,7 +19,7 @@
             "INSTALLED": "*✺❤...😉 නව ප්ලගීනය සාර්ථකව ස්ථාපනය කර ඇත!*",
             "PLUGIN_DESC": "ඔබ ස්ථාපනය කර ඇති මෙවලම් පෙන්වයි.",
             "INSTALLED_FROM_REMOTE": "*ඔබ බාහිරව ස්ථාපනය කරන මෙවලම්:*\n",
-            "NO_PLUGIN": "*ඔබ කිසිදු බාහිර මෙවලමක් ස්ථාපනය කර නැත!*",
+            "NO_PLUGIN": "*ඔබ කිසිදු බාහිර මෙවලමක් ස්ථාපනය කර නැත🖋️!*",
             "REMOVE_DESC": "මෙවලම ඉවත් කරයි.",
             "NEED_PLUGIN": "```කරුණාකර ප්ලගිනයක් ඇතුළත් කරන්න! උදා: .plugin __test```",
             "NOT_FOUND_PLUGIN": "```සමහර විට ඔබ එවැනි මෙවලමක් ස්ථාපනය කර ඇති අතර සමහර විට නැත. නමුත් එය දැන් නොමැති බව විශ්වාසයි..```",
