--- a/language/EN.json
+++ b/language/EN.json
@@ -74,7 +74,7 @@
         },
         "heroku": {
             "RESTART_DESC": "සෙව් බොට් නැවත ආරම්භ කරන්න",
-             "RESTART_MSG": "රීස්ටාර්ටින්ග් ...",
+             "RESTART_MSG": "*ＲＥＳＴＡＲＴＩＮＧ* ...",
              "SHUTDOWN_DESC": "සෙව් බොට් වසා දැමීම ",
             "SHUTDOWN_MSG": "වසා දැමීම ⛔️",
               "DYNO_DESC": "හෙරොකු ඩයිනෝ භාවිතය පරීක්ෂා කරන්න",
