--- a/language/EN.json
+++ b/language/EN.json
@@ -19,7 +19,7 @@
             "INSTALLED": "*✺❤...😉 නව ප්ලගීනය සාර්ථකව ස්ථාපනය කර ඇත!*",
             "PLUGIN_DESC": "ඔබ ස්ථාපනය කර ඇති මෙවලම් පෙන්වයි.",
             "INSTALLED_FROM_REMOTE": "*ඔබ බාහිරව ස්ථාපනය කරන මෙවලම්:*\n",
-            "NO_PLUGIN": "*ඔබ කිසිදු බාහිර මෙවලමක් ස්ථාපනය කර නැත🖋️!*",
+            "NO_PLUGIN": "*ඔබ කිසිදු බාහිර මෙවලමක් ස්ථාපනය කර නැත!*",
             "REMOVE_DESC": "මෙවලම ඉවත් කරයි.",
             "NEED_PLUGIN": "```කරුණාකර ප්ලගිනයක් ඇතුළත් කරන්න! උදා: .plugin __test```",
             "NOT_FOUND_PLUGIN": "```සමහර විට ඔබ එවැනි මෙවලමක් ස්ථාපනය කර ඇති අතර සමහර විට නැත. නමුත් එය දැන් නොමැති බව විශ්වාසයි..```",
@@ -74,7 +74,7 @@
         },
         "heroku": {
             "RESTART_DESC": "සෙව් බොට් නැවත ආරම්භ කරන්න",
-             "RESTART_MSG": "*ＲＥＳＴＡＲＴＩＮＧ* ...",
+             "RESTART_MSG": "♻️ ＲＥＳＴＡＲＴＩＮＧ...",
              "SHUTDOWN_DESC": "සෙව් බොට් වසා දැමීම ",
             "SHUTDOWN_MSG": "වසා දැමීම ⛔️",
               "DYNO_DESC": "හෙරොකු ඩයිනෝ භාවිතය පරීක්ෂා කරන්න",
@@ -187,12 +187,12 @@
             "SONG_DESC": "ගීත mp3 ලෙස ලබාගැනීමට.",
             "NEED_TEXT_SONG": "*ගීතයක නමක් ලබාදෙන්න!*\n*Example:* ```.song පෙම් කවක් ලියු```",
             "NO_RESULT": "*මට කිසිවක් සොයාගත නොහැකි විය :(*",
-            "DOWNLOADING_SONG": "\n*Ｉ'Ｍ ＤＯＷＮＬＯＤ ＹＯＵＲ ＳＯＮＧ➧*n",
-            "UPLOADING_SONG": "\n*Ｉ'Ｍ ＵＰＬＯＡＤＩＮＧ ＹＯＵＲ ＳＯＮＧ\n",
+            "DOWNLOADING_SONG": "\n🎶 *𝙄'𝙈 𝘿𝙊𝙒𝙉𝙇𝙊𝘼𝘿𝙄𝙉𝙂 𝙔𝙊𝙐𝙍 𝙎𝙊𝙉𝙂*📲\n",
+            "UPLOADING_SONG": "\n🎶🎧 *𝙄'𝙈 𝙐𝙋𝙇𝙊𝘼𝘿𝙄𝙉𝙂 𝙔𝙊𝙐𝙍 𝙎𝙊𝙉𝙂* 📲\n",
             "VIDEO_DESC": "යූ ටියුබ් වෙතින් වීඩියෝ Download කරගන්න.",
             "NEED_VIDEO": "*කරුණාකර වීඩියෝ සබැඳියක් ලබාදෙන්න!*\n*Example:* ```.video https://youtu.be/ZoTgnUNASQo```",
-            "DOWNLOADING_VIDEO": "*Ｉ'Ｍ ＤＯＷＮＬＯＤ ＹＯＵＲ ＶＩＤＥＯ➧*",
-            "UPLOADING_VIDEO": "*Ｉ'Ｍ ",
+            "DOWNLOADING_VIDEO": "*🎥𝙄'𝙈 𝘿𝙊𝙒𝙉𝙇𝙊𝘼𝘿𝙄𝙉 𝙔𝙊𝙐𝙍 𝙑𝙄𝘿𝙀𝙊🎞️*",
+            "UPLOADING_VIDEO": "*📲𝙄'𝙈 𝙐𝙋𝙇𝙊𝘼𝘿𝙄𝙉𝙂 𝙔𝙊𝙐𝙍 𝙑𝙄𝘿𝙀𝙊🎥*",
             "YT_DESC": "යූ ටියුබ් එකේ සොයන්න.",
             "NEED_WORDS": "```කරුණාකර වචන කිහිපයක් ලියන්න!```",
             "GETTING_VIDEOS": "```වීඩියෝ සොයමින්....```",
