--- a/language/EN.json
+++ b/language/EN.json
@@ -1,3 +1,4 @@
+
 {
     "__ASENAJSON__": true,
     "LANGUAGE": "English",
@@ -12,56 +13,56 @@
             "WARN": "Warn"
         },
         "_plugin": {
-            "INSTALL_DESC": "බාහිර ප්ලගීනයක් ස්ථාපනය කරන්න..",
-            "NEED_URL": "කරුණාකර  URL එකක් ලබාදෙන්න! උදා:",
-            "INVALID_URL": "```වලංගු URL එකක් ලබාදෙන්න```",
-            "INVALID_PLUGIN": "*❌ මෙය වලංගු නැත!*\n*Error:*",
-            "INSTALLED": "*✺❤...😉 නව ප්ලගීනය සාර්ථකව ස්ථාපනය කර ඇත!*",
-            "PLUGIN_DESC": "ඔබ ස්ථාපනය කර ඇති මෙවලම් පෙන්වයි.",
-            "INSTALLED_FROM_REMOTE": "*ඔබ බාහිරව ස්ථාපනය කරන මෙවලම්:*\n",
-            "NO_PLUGIN": "*ඔබ කිසිදු බාහිර මෙවලමක් ස්ථාපනය කර නැත!*",
-            "REMOVE_DESC": "මෙවලම ඉවත් කරයි.",
-            "NEED_PLUGIN": "```කරුණාකර ප්ලගිනයක් ඇතුළත් කරන්න! උදා: .plugin __test```",
-            "NOT_FOUND_PLUGIN": "```සමහර විට ඔබ එවැනි මෙවලමක් ස්ථාපනය කර ඇති අතර සමහර විට නැත. නමුත් එය දැන් නොමැති බව විශ්වාසයි..```",
-            "DELETED": "*✺❤...😉 සාර්ථකව මකා දමන ලදි!*"
+            "INSTALL_DESC": "*INSTALL AN EXTERNAL PLUGIN....*",
+            "NEED_URL": "*PLEASE PROVIDE A URL❗EX:*",
+            "INVALID_URL": "*ENTER A VALID URL*",
+            "INVALID_PLUGIN": "*❌ THIS IS NOT VALID❗ERROR:*",
+            "INSTALLED": "*✅ NEW PLUGIN SUCCESSFULLY INSTALLED❗*",
+            "PLUGIN_DESC": "*☇SHO THE TOOLS YOU HAVE INSTALLED.*",
+            "INSTALLED_FROM_REMOTE": "*☇TOOLS YOU INSTALL EXTERNALLY:*\n",
+            "NO_PLUGIN": "*YOU HAVE NO EXTERNAL TOOLS INSTALLED*❗",
+            "REMOVE_DESC": "*REMOVES TOOL.*",
+            "NEED_PLUGIN": "*PLEASE INSERT A PLUGIN❗E.G:.*: .plugin __test```",
+            "NOT_FOUND_PLUGIN": "*MAYBE YOU HAVE SUCH A TOOL INSTALLED AND MAYBE NO,BUG I'M SURE IT DOES NOT EXIST NOW❗*",
+            "DELETED": "*✅SUCCESSFULLY DELETED❗*"
         },
         "admin": {
             
-            "BAN_DESC": "කණ්ඩායමේ කෙනෙකු ඉවත් කරන්න.ඔහුගේ පණිවිඩයට ටැග් කරන්න.",
-            "IM_NOT_ADMIN": "*පරිපාලක තනතුර ලැබී නැත🙂*",
-            "BANNED": "සමුහයෙන් නෙරපාහරින ලදී",
-            "GIVE_ME_USER": "පුද්ගලයෙකු ටැග් කරන්න😈!*",
-            "ADD_DESC": "කණ්ඩායමට යමෙකු එකතු කිරීමට",
-            "ADDED": "කණ්ඩායමට එකතු කරන ලදි",
-            "ALREADY_PROMOTED": "```කලින්ම තනතුර ලබාදී ඇත😁```",
-            "PROMOTED": "```තනතුර උසස් කරනලදී!```",
-            "PROMOTE_DESC": "ඕනෑම පුද්ගලයෙකු පරිපාලකයෙකු කරයි",
-            "DEMOTE_DESC": "ඕනෑම පරිපාලකයෙකුගේ බලය ඉවත් කිරීමට",
-            "ALREADY_NOT_ADMIN": "```දැනටමත් පරිපාලක ලෙස කටයුතු කරන අයෙකු පරිපාලකයෙකු කරන්නේ කෙසේද?```",
-            "DEMOTED": "```, ඉවත් කර ඇත!```",
-            "MUTE_DESC": "කණ්ඩායම් කතාබස් නිශ්ශබ්ද කරන්න. පණිවිඩයක් යැවිය හැක්කේ පරිපාලකයින්ට පමණි.",
-            "MUTED": "```කණ්ඩායම් කතාබස් නිශ්ශබ්ද කර ඇත!```",
-            "UNMUTE_DESC": "කණ්ඩායම් කතාබස් ඉවත් කරන්න. ඕනෑම කෙනෙකුට පණිවිඩයක් යැවිය හැකිය.",
-            "UNMUTED": "```කණ්ඩායම් කතාබහ නැවතත් ලබාදී ඇත!```",
-            "INVITE_DESC": "කණ්ඩායමේ ආරාධනා සබැඳිය සපයයි.",
-            "INVITE": "```Invite Link ❤: ```"
+            "BAN_DESC": "*☇REMOVE SOMEONE FROM THE GROUP. TAG HIS MESSAGE.*",
+            "IM_NOT_ADMIN": "*🚫ADMINISTRATOR POST NOT RECEIVED*",
+            "BANNED": "*🚫 WES EXPELLED FROME THE GROUP❌*",
+            "GIVE_ME_USER": "*TAG A PERSON❗*",
+            "ADD_DESC": "*☇TO ADD SOMEONE TO THE GROUP*",
+            "ADDED": "*☇WAS ADDED TO THE GROUP✅*ි",
+            "ALREADY_PROMOTED": "*☇THE POST HAS BEEN GIVEN IN ADVANCE😍*",
+            "PROMOTED": "*☇THE POST WAS PROMOTED❗*",
+            "PROMOTE_DESC": "*☇ANYONE MAKES AN ADMINISTRATOR*",
+            "DEMOTE_DESC": "*☇ TO REMOVE THE POWER OF ANI ADMINISTRATOR*",
+            "ALREADY_NOT_ADMIN": "*☇HOW TO MAKE AN ADMINISTRATOR OUT OF SOMEONE WHO IS ALREADY AN ADMINISTRATOE?*",
+            "DEMOTED": "*🚫 REMOVED❗*",
+            "MUTE_DESC": "*☇ MUTE GROUP CHATS. ONLY ADMINS CAN SEND A MESSAGE.*",
+            "MUTED": "*🚫 GROUP CHAT HAS MUTED❗🔇*",
+            "UNMUTE_DESC": "*☇REMOVE GROUP CHATS.ANYONE CAN SEND A MESSAGE.*",
+            "UNMUTED": "*😍GROUP CHAT HAS UNMUTE🔊🔉*",
+            "INVITE_DESC": "*PROVIDES GROUP INVITATION LINK.*",
+            "INVITE": "*😈INVITE LINK😈*"
         },
         "locate": {
             "L_DESC": "It send your location.",
             "L_WARN": "Please open your location before using command!"
         },
         "afk": {
-            "AFK_DESC": "එය බොට්ව AFK බවට පත් කරයි.",
-             "IM_AFK": "* මම දැන් AFK! *",
-             "IM_AFK_NOMD": "මම දැන් AFK!",
-             "REASON": "හේතුව",
-             "LAST_SEEN": "ලාස්ට් සීන්",
-             "IM_NOT_AFK": "මම තවදුරටත් AFK නොවේ!",
-             "AFK_TEXT": "මගේ හිමිකරු මේ මොහොතේ  නොමැත.",
-             "AFK_TEXT_NOMD": "මම පුද්ගලික online සහයක වෙමි!",
-             "HOUR": "පැය",
-             "MINUTE": "මිනිත්තු",
-             "SECOND": "තත්පර"
+            "AFK_DESC": "*IT TURNS THE BOAT INTO AFK.*",
+             "IM_AFK": "*😈I'M AFK NOW❗*",
+             "IM_AFK_NOMD": "*I'M AFK NOW!*😈",
+             "REASON": "*REASON*",
+             "LAST_SEEN": "*LAST SEEN*",
+             "IM_NOT_AFK": "*I'M NOT AFK ANYMORE❗*",
+             "AFK_TEXT": "*MY OWNER IS CURRENTLY UNAVAILABLE.*",
+             "AFK_TEXT_NOMD": "*I AM A PERSONAL ONLINE ASSISTANT❗*",
+             "HOUR": "*HOURS*",
+             "MINUTE": "*MINUTES*",
+             "SECOND": "*SECONDS*"
         },
         "evaluators": {
             "TERM_DESC": "Allows to run the command on the server's shell.",
@@ -218,13 +219,13 @@
         "updater": {
             "UPDATER_DESC": "Checks the update.\n",
             "UPDATE": "*Your bot is completely up-to-date!*",
-            "NEW_UPDATE": "*❆❆✺𝘬𝘪𝘯𝘨 𝘪𝘴𝘶𝘸𝘢✺❆❆ Update කිරිමට .update now විධානය බාවිත කරන්න*\n\n please ask support group before updating. Otherwise chance to get error\n\nChanges:\n```",
+            "NEW_UPDATE": "**USE THE  .UPDATE NOW COMMAND TO UPDATE THE😈ＫＩＮＧ ＫＡＶＩＹＡ ＢＯＴ(කින්ග් කවියා බොට් UPDATE කිරීමට .update now විඩානය බාවිතා කරන්න.)*",
             "UPDATE_NOW_DESC": "It makes updates.",
-            "UPDATING": "```Updating..```",
+            "UPDATING": "*ＵＰＤＡＴＩＮＧ....*",
             "INVALID_HEROKU": "*❌ Your Heroku information is wrong!*",
-            "UPDATED": "*Updated 🇱🇰✺❤...😉*",
-            "UPDATED_LOCAL": "*✺❤...😉 Successfully Updated!*",
-            "AFTER_UPDATE": "*✺❤...😉 ❆✺𝘬𝘪𝘯𝘨 𝘪𝘴𝘶𝘸𝘢✺❆ Restarting*"
+            "UPDATED": "*😍UPDATED😍*",
+            "UPDATED_LOCAL": "**✅ SUCCESSFULLY UPDATE😈*",
+            "AFTER_UPDATE": "*😈𝙆𝙄𝙉𝙂 𝙆𝘼𝙑𝙄𝙔𝘼 𝘽𝙊𝙏 𝙍𝙀𝙎𝙏𝘼𝙍𝙏𝙄𝙉𝙂☇*"
         },
         "weather": {
             "WEATHER_DESC": "Shows the weather.",
@@ -328,86 +329,86 @@
             "T_DESC": "Applies the selected TBlend effect to videos." 
         },
         "mute": {
-            "1MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය  1 ( මිනිත්තු )🕑*",
-            "2MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 2 ( මිනිත්තු )🕑*",
-            "3MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 3 ( මිනිත්තු )🕑*",
-            "4MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 4 ( මිනිත්තු )🕑*",
-            "5MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 5 ( මිනිත්තු )🕑*",
-            "6MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 6 ( මිනිත්තු )🕑*",
-            "7MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 7 ( මිනිත්තු )🕑*",
-            "8MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 8 ( මිනිත්තු )🕑*",
-            "9MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 9 ( මිනිත්තු )🕑*",
-            "10MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 10 ( මිනිත්තු )🕑*",
-            "11MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 11 ( මිනිත්තු )🕑*",
-            "12MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 12 ( මිනිත්තු )🕑*",
-            "13MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 13 ( මිනිත්තු )🕑*",
-            "14MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 14 ( මිනිත්තු )🕑*",
-            "15MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 15 ( මිනිත්තු )🕑*",
-            "16MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 16 ( මිනිත්තු )🕑*",
-            "17MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 17 ( මිනිත්තු )🕑*",
-            "18MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 18 ( මිනිත්තු )🕑*",
-            "19MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 19 ( මිනිත්තු )🕑*",
-            "20MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 20 ( මිනිත්තු )🕑*",
-            "21MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 21 ( මිනිත්තු )🕑*",
-            "22MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 22 ( මිනිත්තු )🕑*",
-            "23MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 23 ( මිනිත්තු )🕑*",
-            "24MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 24 ( මිනිත්තු )🕑*",
-            "25MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 25 ( මිනිත්තු )🕑*",
-            "26MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 26 ( මිනිත්තු )🕑*",
-            "27MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 27 ( මිනිත්තු )🕑*",
-            "28MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 28 ( මිනිත්තු )🕑*",
-            "29MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 29 ( මිනිත්තු )🕑*",
-            "30MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 30 ( මිනිත්තු )🕑*",
-            "31MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 31 ( මිනිත්තු )🕑*",
-            "32MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 32 ( මිනිත්තු )🕑*",
-            "33MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 33 ( මිනිත්තු )🕑*",
-            "34MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 34 ( මිනිත්තු )🕑*",
-            "35MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 35 ( මිනිත්තු )🕑*",
-            "36MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 36 ( මිනිත්තු )🕑*",
-            "37MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 37 ( මිනිත්තු )🕑*",
-            "38MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 38 ( මිනිත්තු )🕑*",
-            "39MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 39 ( මිනිත්තු )🕑*",
-            "40MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 40 ( මිනිත්තු )🕑*",
-            "41MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 41 ( මිනිත්තු )🕑*",
-            "42MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 42 ( මිනිත්තු )🕑*",
-            "43MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 43 ( මිනිත්තු )🕑*",
-            "44MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 44 ( මිනිත්තු )🕑*",
-            "45MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 45 ( මිනිත්තු )🕑*",
-            "46MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 46 ( මිනිත්තු )🕑*",
-            "47MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 47 ( මිනිත්තු )🕑*",
-            "48MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 48 ( මිනිත්තු )🕑*",
-            "49MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 49 ( මිනිත්තු )🕑*",
-            "50MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 50 ( මිනිත්තු )🕑*",
-            "51MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 51 ( මිනිත්තු )🕑*",
-            "52MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 52 ( මිනිත්තු )🕑*",
-            "53MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 53 ( මිනිත්තු )🕑*",
-            "54MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 54 ( මිනිත්තු )🕑*",
-            "55MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 55 ( මිනිත්තු )🕑*",
-            "56MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 56 ( මිනිත්තු )🕑*",
-            "57MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 57 ( මිනිත්තු )🕑*",
-            "58MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 58 ( මිනිත්තු )🕑*",
-            "59MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 59 ( මිනිත්තු )🕑*",
-            "60MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 1 පැය!*",
-            "75MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 1 පැය and 15 මිනිත්තු!*",
-            "90MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 1 පැය and 30 මිනිත්තු!*",
-            "105MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 1 පැය and 45 මිනිත්තු!*",
-            "120MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 2 පැය!*",
-            "135MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 2 පැය and 15 මිනිත්තු!*",
-            "150MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 2 පැය and 30 මිනිත්තු!*",
-            "165MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 2 පැය and 45 මිනිත්තු!*",
-            "180MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 3 පැය!*",
-            "240MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 4 පැය!*",
-            "300MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 5 පැය!*",
-            "360MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 6 පැය!*",
-            "420MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 7 පැය!*",
-            "480MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 8 පැය!*",
-            "540MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 9 පැය!*",
-            "600MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 10 පැය!*",
-            "660MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 11 පැය!*",
-            "720MUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 12 පැය!*",
-            "1DAYMUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 1 දින!*",
-            "2DAYMUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 2 දින!*",
-            "3DAYMUTE": "*සමූහය ඉදිරියට නිහඩව ඇති කාලය 3 දින!*",
+            "1MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD  1 ( *MINUTES* )🕑*",
+            "2MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 2 ( *MINUTES* )🕑*",
+            "3MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 3 ( *MINUTES* )🕑*",
+            "4MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 4 ( *MINUTES* )🕑*",
+            "5MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 5 ( *MINUTES* )🕑*",
+            "6MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 6 ( *MINUTES* )🕑*",
+            "7MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 7 ( *MINUTES* )🕑*",
+            "8MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 8 ( *MINUTES* )🕑*",
+            "9MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 9 ( *MINUTES* )🕑*",
+            "10MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 10 ( *MINUTES* )🕑*",
+            "11MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 11 ( *MINUTES* )🕑*",
+            "12MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 12 ( *MINUTES* )🕑*",
+            "13MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 13 ( *MINUTES* )🕑*",
+            "14MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 14 ( *MINUTES* )🕑*",
+            "15MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 15 ( *MINUTES* )🕑*",
+            "16MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 16 ( *MINUTES* )🕑*",
+            "17MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 17 ( *MINUTES* )🕑*",
+            "18MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 18 ( *MINUTES* )🕑*",
+            "19MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 19 ( *MINUTES* )🕑*",
+            "20MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 20 ( *MINUTES* )🕑*",
+            "21MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 21 ( *MINUTES* )🕑*",
+            "22MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 22 ( *MINUTES* )🕑*",
+            "23MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 23 ( *MINUTES* )🕑*",
+            "24MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 24 ( *MINUTES* )🕑*",
+            "25MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 25 ( *MINUTES* )🕑*",
+            "26MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 26 ( *MINUTES* )🕑*",
+            "27MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 27 ( *MINUTES* )🕑*",
+            "28MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 28 ( *MINUTES* )🕑*",
+            "29MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 29 ( *MINUTES* )🕑*",
+            "30MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 30 ( *MINUTES* )🕑*",
+            "31MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 31 ( *MINUTES* )🕑*",
+            "32MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 32 ( *MINUTES* )🕑*",
+            "33MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 33 ( *MINUTES* )🕑*",
+            "34MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 34 ( *MINUTES* )🕑*",
+            "35MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 35 ( *MINUTES* )🕑*",
+            "36MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 36 ( *MINUTES* )🕑*",
+            "37MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 37 ( *MINUTES* )🕑*",
+            "38MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 38 ( *MINUTES* )🕑*",
+            "39MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 39 ( *MINUTES* )🕑*",
+            "40MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 40 ( *MINUTES* )🕑*",
+            "41MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 41 ( *MINUTES* )🕑*",
+            "42MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 42 ( *MINUTES* )🕑*",
+            "43MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 43 ( *MINUTES* )🕑*",
+            "44MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 44 ( *MINUTES* )🕑*",
+            "45MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 45 ( *MINUTES* )🕑*",
+            "46MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 46 ( *MINUTES* )🕑*",
+            "47MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 47 ( *MINUTES* )🕑*",
+            "48MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 48 ( *MINUTES* )🕑*",
+            "49MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 49 ( *MINUTES* )🕑*",
+            "50MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 50 ( *MINUTES* )🕑*",
+            "51MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 51 ( *MINUTES* )🕑*",
+            "52MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 52 ( *MINUTES* )🕑*",
+            "53MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 53 ( *MINUTES* )🕑*",
+            "54MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 54 ( *MINUTES* )🕑*",
+            "55MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 55 ( *MINUTES* )🕑*",
+            "56MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 56 ( *MINUTES* )🕑*",
+            "57MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 57 ( *MINUTES* )🕑*",
+            "58MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 58 ( *MINUTES* )🕑*",
+            "59MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 59 ( *MINUTES* )🕑*",
+            "60MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 1 HOURS!*",
+            "75MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 1 HOURS and 15 *MINUTES*!*",
+            "90MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 1 HOURS and 30 *MINUTES*!*",
+            "105MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 1 HOURS and 45 *MINUTES*!*",
+            "120MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 2 HOURS!*",
+            "135MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 2 HOURS and 15 *MINUTES*!*",
+            "150MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 2 HOURS and 30 *MINUTES*!*",
+            "165MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 2 HOURS and 45 *MINUTES*!*",
+            "180MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 3 HOURS!*",
+            "240MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 4 HOURS!*",
+            "300MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 5 HOURS!*",
+            "360MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 6 HOURS!*",
+            "420MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 7 HOURS!*",
+            "480MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 8 HOURS!*",
+            "540MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 9 HOURS!*",
+            "600MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 10 HOURS!*",
+            "660MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 11 HOURS!*",
+            "720MUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 12 HOURS!*",
+            "1DAYMUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 1 DAY!*",
+            "2DAYMUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 2 DAY!*",
+            "3DAYMUTE": "*THE TIME WHEN THE THE GROUP IS SILENT AHEAD 3 DAY!*",
             "TÜR": "*Unknown Command!*\n_Minute: 1-59m_\n_Hour: 1-12h_\n_Day: 1d-3d_",
             "MUTE_DESC": "Turns off group chat. Only admins can send messages!",
             "MUTE_OPEN": "*Allright Boss! Chat Has Been Opened!*"
