--- a/language/EN.json
+++ b/language/EN.json
@@ -1,4 +1,3 @@
-
 {
     "__ASENAJSON__": true,
     "LANGUAGE": "English",
@@ -69,53 +68,53 @@
             "GIVE_ME_CODE": "*Give me a code!*"
         },
         "nekobin": {
-            "NEKO_DESC": "පිළිතුරු එකතු කරන පණිවිඩ එකතු වේ nekobin.com වෙත",
-            "NEED_REPLY": "```කරුණාකර පණිවිඩයකට පිළිතුරු දෙන්න!```",
-            "MUST_TEXT": "```කරුණාකර ඕනෑම පණිවිඩයකට පිළිතුරු දෙන්න```"
+            "NEKO_DESC": "*REPLY MESSAGES ARE ADDED TO* nekobin.com",
+            "NEED_REPLY": "*PLEASE REPLY TO A MESSAGE❗*",
+            "MUST_TEXT": "*PLEASE REPLY TO ANY MESSAGE😈*"
         },
         "heroku": {
-            "RESTART_DESC": "සෙව් බොට් නැවත ආරම්භ කරන්න",
-             "RESTART_MSG": "♻️ ＲＥＳＴＡＲＴＩＮＧ...",
-             "SHUTDOWN_DESC": "සෙව් බොට් වසා දැමීම ",
-            "SHUTDOWN_MSG": "වසා දැමීම ⛔️",
-              "DYNO_DESC": "හෙරොකු ඩයිනෝ භාවිතය පරීක්ෂා කරන්න",
-              "DYNO_TOTAL": "මුළු කෝටාව",
-             "DYNO_USED": "භාවිතා කළ කෝටාව",
-             "PERCENTAGE": "ප්‍රතිශතය",
-             "DYNO_LEFT": "ඉතිරිව ඇත",
-              "SETVAR_DESC": "heroku config var සකසන්න",
-               "SET_SUCCESS": "සාර්ථකකයි {} ➜ {},",
-              "KEY_VAL_MISSING": "යතුර හෝ අගය අස්ථානගත වී ඇත",
-              "INVALID": "අවලංගු යතුර: අගය ආකෘතිය",
-             "GETVAR_DESC": "හෙරොකු වින්‍යාසය ලබා ගන්න",
-                 "DELVAR_DESC": "heroku config var මකන්න",
-                 "DEL_SUCCESS": "{} සාර්ථකව මකා දමන ලදි",
-              "NOT_FOUND": "මෙම යතුර සඳහා ප්‍රතිඵල හමු නොවීය"                   
+            "RESTART_DESC": "*RESTART SAVE BOT*",
+             "RESTART_MSG": "*♻️ ＲＥＳＴＡＲＴＩＮＧ...*",
+             "SHUTDOWN_DESC": "*CLOSE THE SAVE BOT* ",
+            "SHUTDOWN_MSG": "*CLOSING🚫*️",
+              "DYNO_DESC": "*CHECK OUT THE USE OF THE HEROKU DINO*",
+              "DYNO_TOTAL": "*TOTAL QUOTA*",
+             "DYNO_USED": "*QUOTA USED*",
+             "PERCENTAGE": "*PERCENTAGE*",
+             "DYNO_LEFT": "*IS LEFT*",
+              "SETVAR_DESC": "*SET HEROKU CONFIG VAR*",
+               "SET_SUCCESS": "*✅SUCCESSUFUL* {} ➜ {},",
+              "KEY_VAL_MISSING": "*KEY OR VALUE IS MISSING*",
+              "INVALID": "*INVALID KEY:VALUE FORMAT*",
+             "GETVAR_DESC": "*GET THE HEROKU CONFIGURATION*",
+                 "DELVAR_DESC": "*DELETE HEROKU CONFIG VAR*",
+                 "DEL_SUCCESS": "{} *✅SUCCESSFULLY DELETED*",
+              "NOT_FOUND": "*NO RESULTES FOUND FRO THIS KEY*"                   
         },
         "filters": {
-            "FILTER_DESC": "එය පෙරණයක් එක් කරයි.යමෙක් ඔබේ පෙරණය ලියනවා නම්, එය පිළිතුර යවයි.ඔබ ලියනවා නම් .ෆිල්ටර්, එය ඔබගේ පෙරහන් ලැයිස්තුව පෙන්වයි.",
-            "NO_FILTER": "*❌ මෙම කතාබහ තුළ පෙරහන් නොමැත!*",
-            "FILTERS": "*🔎 මෙම චැට් එකේ ඔබේ පෙරහන් තිබේ:*",
-            "NEED_REPLY": "*❌ කරුණාකර පිළිතුරු ටයිප් කරන්න!*\n*Example:*",
-            "FILTERED": "*✺❤...😉 සාර්ථකව සකසන ලදී* ```{}``` *",
-            "STOP_DESC": "ඔබ කලින් එකතු කළ පෙරනය නවත්වයි.",
-            "NEED_FILTER": "*❌ කරුණාකර පෙරනයක් ටයිප් කරන්න!*\n*Example:*",
-            "ALREADY_NO_FILTER": "*❌ මේ වගේ පෙරනයක් දැනටමත් නැත!*",
-            "DELETED": "*✺❤...😉 පෙරණය සාර්ථකව මකා දැමීය!*"
+            "FILTER_DESC": "*IT ADDS A FILTER. IF SOMEONE WRITES YOUR FILTER, IT SENDS AN ANSWER. IF YOU WRITE A FILTER, IT SHOWS YOUR FILTER LIST.*",
+            "NO_FILTER": "*❌THERE ARE NO FILTERS IN THIS CONVERSATION❗*",
+            "FILTERS": "*🔎THIS CHAT HAS YOUR FILTERS:*",
+            "NEED_REPLY": "*❌PLEASE TYPE THE ANSWER❗EXAMPLE:*",
+            "FILTERED": "*✅WAS SUCCESSFULLY SET UP* ```{}``` *",
+            "STOP_DESC": "*STOPS THE FILTER YOU ADDED EARLIER.*",
+            "NEED_FILTER": *❌PLEASE TYPE A FILTER❗EXAMPLE:*",
+            "ALREADY_NO_FILTER": "*NO SUCH FILTER ALREADY❗*",
+            "DELETED": "*✅FILTER DELETED SUCCESSFULLY❗*"
         },
         "greetings": {
-            "WELCOME_DESC": "එය පිළිගැනීමේ පණිවිඩය සකසයි. ඔබ එය හිස්ව තැබුවහොත් එය පිළිගැනීමේ පණිවිඩය පෙන්වයි.",
-            "NOT_SET_WELCOME": "*ඔබ තවමත් පිළිගැනීමේ පණිවිඩය සකසන්නේ නැත.!*\n**To set:** ```.ඔබගේ පිළිගැනීමේ පණිවිඩය සාදරයෙන් පිළිගනිමු```",
-            "WELCOME_ALREADY_SETTED": "*✺❤...😉 දැනටමත් සකසා ඇති පණිවිඩය දැනටමත්පණිවුඩයත!*\n*Message:* ```",
-            "NEED_WELCOME_TEXT": "*පිළිගැනීමේ පණිවිඩය සැකසීමට ඔබ පණිවිඩයක් ලිවිය යුතුය.*\n*උදාහරණයක්:* ```.welcome සාදරයෙන් පිළිගනිමු!```",
-            "WELCOME_DELETED": "*✺❤...😉 පිළිගැනීමේ පණිවිඩය සාර්ථකව මකා දමා ඇත!*",
-            "WELCOME_SETTED": "*✺❤...😉 පිළිගැනීමේ පණිවිඩය සාර්ථකව සකසා ඇත!*",
-            "GOODBYE_DESC": "ආයුබෝවන් පණිවිඩය සකසයි.ඔබ හිස්ව හැදෑරෙනවා නම්, එය හොඳ පණිවිඩය පෙන්වයි.",
-            "NOT_SET_GOODBYE": "*ඔබ සමුගැනීමේ පණිවිඩයක් නොතැබීය!*\n*To set:* ```.ඔබේ සමුගැනීම පණිවිඩය```",
-            "GOODBYE_ALREADY_SETTED": "*✺❤...😉 සමුගැනීමේ පණිවිඩය සකසා ඇත!*\n*Messපණිවුඩය``",
-            "NEED_GOODBYE_TEXT": "*සමුගැනීමේ පණිවිඩය සැකසීමට ඔබ පණිවිඩයක් ලිවිය යුතුය.*\n*Exampඋදාහරණයක්`.goodbye සුබගමන්!```",
-            "GOODBYE_DELETED": "*✺❤...😉 සමුගැනීමේපණිවිඩය සාර්ථකව මකා දමා ඇත!*",
-            "GOODBYE_SETTED": "*✺❤...😉 සමුගැනීමේ පණිවිඩය සාර්ථකව සකසා ඇත!*"
+            "WELCOME_DESC": "*IT SETS THE WELCOME MESSAGE. IF YOU LEAVE IT BLANK IT WILL SHO A WELCOME MESSAGE.*",
+            "NOT_SET_WELCOME": "*YOU ARE NOT PROCESSING THE WELCOME MESSAGE YET❗*\n**To set:**YOUR WELCOME MESSAGE IS WELCOME*",
+            "WELCOME_ALREADY_SETTED": "*✅MESSAGE ALREADY PROCESSED IS ALREDY IN THE MESSAGE❗*\n*Message:* ```",
+            "NEED_WELCOME_TEXT": "*YOU MUST WRITE A MESSAGE TO PROCESS THE WELCOME MESSAGE.*\n*EX:* ```.welcome සාදරයෙන් පිළිගනිමු!```",
+            "WELCOME_DELETED": "*✅WELCOME MESSAGE SUCCESSFULLY DELETED❗*",
+            "WELCOME_SETTED": "*✅WELCOME MESSAGE SUCCESSFULLY SET❗*",
+            "GOODBYE_DESC": "*HELLO SETS THE MESSAGE. IF YOU LEAVE BLANK, IT'S A GOOD MESSAGE*",
+            "NOT_SET_GOODBYE": "*YOU HAVE NOY SENT A FAREWELL MESSAGE❗*\n*To set:* ```.ඔබේ සමුගැනීම පණිවිඩය```",
+            "GOODBYE_ALREADY_SETTED": "**✅FAREWELL MESSAGE SET❗*\n*Messපණිවුඩය``",
+            "NEED_GOODBYE_TEXT": "*YOU MUST WRITE A MESSAGE TO PROCESS THE FAREWELL MESSAGE.*\n*Exampඋදාහරණයක්`.goodbye සුබගමන්!```",
+            "GOODBYE_DELETED": "*✅FAREWELL MESSAGE SUCESSFULLY DELETED❗*",
+            "GOODBYE_SETTED": "*✅FAREWELL MESSAGE SET SUCCESSFULLY❗*"
         },
         "lydia": {
             "ADDLYDIA_DESC": "Activates Lydia (AI) for the user.",
