--- a/language/EN.json
+++ b/language/EN.json
@@ -74,7 +74,7 @@
         },
         "heroku": {
             "RESTART_DESC": "සෙව් බොට් නැවත ආරම්භ කරන්න",
-             "RESTART_MSG": "රීස්ටාර්ටින්ග් ...",
+             "RESTART_MSG": "*♻️ ＲＥＳＴＡＲＴＩＮＧ...*",
              "SHUTDOWN_DESC": "සෙව් බොට් වසා දැමීම ",
             "SHUTDOWN_MSG": "වසා දැමීම ⛔️",
               "DYNO_DESC": "හෙරොකු ඩයිනෝ භාවිතය පරීක්ෂා කරන්න",
@@ -187,15 +187,15 @@
             "SONG_DESC": "ගීත mp3 ලෙස ලබාගැනීමට.",
             "NEED_TEXT_SONG": "*ගීතයක නමක් ලබාදෙන්න!*\n*Example:* ```.song පෙම් කවක් ලියු```",
             "NO_RESULT": "*මට කිසිවක් සොයාගත නොහැකි විය :(*",
-            "DOWNLOADING_SONG": "\n*✺❤...😉 ඔබ සෙවූ ගීතය Downloading....*\n",
-            "UPLOADING_SONG": "\n*✺❤...😉 ඔබ සෙවූ ගීතය Uploading.*\n",
+            "DOWNLOADING_SONG": "\n🎶*𝙄'𝙈 𝘿𝙊𝙒𝙉𝙇𝙊𝘼𝘿𝙄𝙉𝙂 𝙔𝙊𝙐𝙍 𝙎𝙊𝙉𝙂*📲\n",
+            "UPLOADING_SONG": "\n🎶🎧 *𝙄'𝙈 𝙐𝙋𝙇𝙊𝘼𝘿𝙄𝙉𝙂 𝙔𝙊𝙐𝙍 𝙎𝙊𝙉𝙂*\n",
             "VIDEO_DESC": "යූ ටියුබ් වෙතින් වීඩියෝ Download කරගන්න.",
             "NEED_VIDEO": "*කරුණාකර වීඩියෝ සබැඳියක් ලබාදෙන්න!*\n*Example:* ```.video https://youtu.be/ZoTgnUNASQo```",
-            "DOWNLOADING_VIDEO": "*✺❤...😉 ඔබගේ වීඩියෝව Download කරමින්...*",
-            "UPLOADING_VIDEO": "*✺❤...😉 ඔබගේ වීඩියෝව Upload කරමින්...*",
+            "DOWNLOADING_VIDEO": "*🎥𝙄'𝙈 𝘿𝙊𝙒𝙉𝙇𝙊𝘼𝘿𝙄𝙉 𝙔𝙊𝙐𝙍 𝙑𝙄𝘿𝙀𝙊🎞️*",
+            "UPLOADING_VIDEO": "*📲𝙄'𝙈 𝙐𝙋𝙇𝙊𝘼𝘿𝙄𝙉𝙂 𝙔𝙊𝙐𝙍 𝙑𝙄𝘿𝙀𝙊🎥*",
             "YT_DESC": "යූ ටියුබ් එකේ සොයන්න.",
             "NEED_WORDS": "```කරුණාකර වචන කිහිපයක් ලියන්න!```",
-            "GETTING_VIDEOS": "```වීඩියෝ සොයමින්....```",
+            "GETTING_VIDEOS": "*SEARCHING FOR VIDEOS....😍*",
             "NOT_FOUND": "*එවැනි යමක් සොයාගැනීමට නොහැකි ☹️*",
             "SEARCHING": "*🔎 සොයමින්...*",
             "WIKI_DESC": "විකිපීඩියාවල ලිපි සෙවීමට.",
@@ -218,13 +218,13 @@
         "updater": {
             "UPDATER_DESC": "Checks the update.\n",
             "UPDATE": "*Your bot is completely up-to-date!*",
-            "NEW_UPDATE": "*❆❆✺𝘬𝘪𝘯𝘨 𝘪𝘴𝘶𝘸𝘢✺❆❆ Update කිරිමට .update now විධානය බාවිත කරන්න*\n\n please ask support group before updating. Otherwise chance to get error\n\nChanges:\n```",
+            "NEW_UPDATE": "*❆❆✺KING KAVIYA✺❆❆ Update කිරිමට .update now විධානය බාවිත කරන්න*\n\n please ask support group before updating. Otherwise chance to get error\n\nChanges:\n```",
             "UPDATE_NOW_DESC": "It makes updates.",
             "UPDATING": "```Updating..```",
             "INVALID_HEROKU": "*❌ Your Heroku information is wrong!*",
             "UPDATED": "*Updated 🇱🇰✺❤...😉*",
             "UPDATED_LOCAL": "*✺❤...😉 Successfully Updated!*",
-            "AFTER_UPDATE": "*✺❤...😉 ❆✺𝘬𝘪𝘯𝘨 𝘪𝘴𝘶𝘸𝘢✺❆ Restarting*"
+            "AFTER_UPDATE": "*✺❤...😉 ❆✺KING KAVIYA✺❆ Restarting*"
         },
         "weather": {
             "WEATHER_DESC": "Shows the weather.",
